# rpg-roleplay-platform

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: desktop-release.yml  docker-image.yml  lighthouse-ci.yml  warm-runtime-cache.yml
deploy/: docker-compose.yml
desktop/: package-lock.json  package.json
desktop/scripts/: bundle-backend.ps1  bundle-backend.sh
desktop/src/: config.js  main.js  preload.js
desktop/src/control-panel/: index.html  panel.js
docs/design/: K_model_layer_and_image_gen.md  M_progress_advancement.md
frontend/: .gitignore  .lighthouserc.json  .oxfmtrc.json  .oxlintrc.json  Game Console.html  Platform.html  biome.json  index.html  package-lock.json  package.json  playwright.config.js  test-integration.sh  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/help/: __index.json
frontend/src/: api-client.js  console-assistant-navigation.jsx  data-loader.js  game-app.jsx  game-composer.jsx  game-console.css  game-panels.jsx  login-app.jsx  main.jsx  media.css  platform-app.jsx  platform.css  responsive.jsx  router.js  runtime-telemetry.js  tavern-app.jsx  tavern.css  test-setup.ts  toast.jsx
frontend/src/__tests__/: api-client.test.ts  login-app.test.tsx  markdown-cjk-italic.test.tsx  md-diff-hunks.test.js  md-ghost.test.js  md-serialize.test.js  (+6 more)
rpg/: app.py  chapter_fact_indexer.py  chat_pipeline.py  model_aliases.py  model_probe.py  model_registry.py  pyproject.toml  redis_bus.py  requirements.txt  retrieval.py  save_phase_manager.py  script_timeline.py  state_event_bus.py
rpg/agents/: _harness.py  anchor_seed_agent.py  command_agent.py  context_agent.py  extractor.py  phase_digest_agent.py
rpg/agents/gm/: master.py
rpg/agents/gm/backends/: anthropic.py  vertex.py
rpg/agents/image_gen/: __init__.py  base.py  dashscope.py  dispatch.py  doubao.py  vertex.py
rpg/config/: model_catalog.json
rpg/console_assistant/: confirmation.py  editor_context.py  llm_loop.py  prompts.py  streaming.py  tools.py
rpg/context_engine/: _constants.py  formatters.py  loaders.py
rpg/context_providers/: novel.py  tavern.py
rpg/core/: config.py  llm_backend.py  request_cache.py  startup.py
rpg/extract/: arc_pipeline.py  dedup.py  embed.py  per_chapter.py  pipeline.py  rebuild.py  resolve.py  seed.py
rpg/gm_serving/: anchor_reconcile.py  settings.py
rpg/ingest/: filters.py
rpg/kb/: canon_repo.py  recall.py  reveal.py
rpg/platform_app/: account_io.py  auth.py  cluster.py  email.py  federation.py  frontend_routes.py  image_jobs.py  import_pipeline.py  persona_skills.py  postproc_queue.py  runtime.py  save_bundle.py  save_io.py  script_import.py  security.py  tavern_cards.py  tavern_chats.py  user_cards.py  user_credentials.py  workspace.py
rpg/platform_app/achievements/: __init__.py
rpg/platform_app/api/: __init__.py  _deps.py  admin.py  auth.py  feedback.py  images.py  imports.py  me.py  policy.py  saves.py  script_edit.py  scripts.py
rpg/platform_app/branches/: runtime.py  seed.py
rpg/platform_app/db/: init.py  migrations.py
rpg/platform_app/knowledge/: _search.py  card_audit.py  character_cards.py  embedding.py  retrieval.py  script_overrides.py  script_pack.py
rpg/routes/: console_assistant.py  core.py  game.py  mcp.py  models.py
rpg/rules/: engine.py
rpg/rules/dnd5e/: character.py
rpg/rules_bridge/: __init__.py  combat.py  inventory.py  module_ops.py
rpg/schemas/: console_assistant.py
rpg/scripts/: cron_scheduler.py  run_postproc_worker.py
rpg/state/: core.py  parsers.py
rpg/state/_mixins/: pending.py  rules_gameplay.py
rpg/tests/: test_embed_recall_consistency.py  test_feedback.py  test_password_reset.py  test_vertex_user_sa.py
rpg/tests/integration/: test_credential_overlay_sync.py  test_critical_paths.py  test_extract_resolve_protagonist.py  test_frontier_gating_equiv.py  test_import_pipeline_model_resolution.py  test_phase0_model_unify.py  test_phase1_image_gen.py  test_recall.py  test_script_pack_chunks.py
rpg/tests/unit/: test_anchor_pov_and_progress_fixes.py  test_combat_lifecycle_fixes.py  test_context_phase_passes_save_id.py  test_editor_provenance_guards.py  test_embedding_retry_cap.py  test_extract_resolve_qa_fixes.py  test_history_no_empty_assistant.py  test_npc_card_rename_collision.py  test_request_cache_invalidate.py  test_root_redirect.py  test_save_import_size_guard.py  test_script_timeline_anchors.py  test_session_model_app_view.py  test_short_input_directive.py  test_verify_bruteforce_guard.py  test_worldbook_backfill_dedup_by_id.py
rpg/tools_dsl/: command_dispatcher.py  command_tools_anchors.py  command_tools_creative.py  command_tools_image.py  command_tools_kb.py  command_tools_misc.py  command_tools_persona.py  command_tools_register.py  command_tools_script_write.py  command_tools_tavern.py  set_parser.py  tool_registry.py
scripts/: dev.sh  setup.sh
(+128 files in other folders)
