[project]
name = "rpg"
version = "0.0.0"
description = "RPG roleplay backend — FastAPI + Postgres + Anthropic/Vertex AI"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72",
    "argon2-cffi>=23.0",
    "croniter>=6.2",
    "cryptography>=48.0",
    "fastapi>=0.124",
    "fsspec>=2025.12",
    "google-auth>=2.43",
    "google-genai>=1.55",
    "httpx>=0.28",
    "openai>=2.38",
    "psycopg[binary]>=3.3",
    "psycopg-pool>=3.3",
    "pydantic>=2.13",
    "python-dotenv>=1.2",
    "python-multipart>=0.0.29",
    "redis>=5.3",
    "uvicorn>=0.38",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "ty>=0.0.43",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "claude_design_upload",
    "user_skills",
    "saves",
    "platform_data",
    "indexes",
    "modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import order)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = [
    "E501",  # line too long
    "B008",  # function call in default arg (FastAPI Depends pattern)
    "E402",  # module level import not at top (我们有合理用例)
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = ["tests/**", ".venv/**", "claude_design_upload/**", "user_skills/**"]

[tool.ty.rules]
unresolved-import = "ignore"

# DB-heavy files: psycopg3 uses dict_row factory (row_factory=dict_row in pool).
# Ty infers fetchone()/fetchall() rows as tuple[Any,...] causing false-positive
# call-overload (row["key"]), index (row["key"]), attr-defined (.get()), union-attr.
# Suppress all relevant error codes together per module group.
[[tool.ty.overrides]]
include = [
    "**/*.py",
]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
not-subscriptable = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
call-non-callable = "ignore"
invalid-parameter-default = "ignore"
invalid-raise = "ignore"
unresolved-global = "ignore"
unused-type-ignore-comment = "ignore"
